examples/test/testpolicy1854.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1854
  namespace: namespace305
spec:
  podSelector:
    matchLabels:
      key25: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value38
          key26: value11
          key20: value39
      podSelector:
        matchLabels:
          key10: value28
          key46: value7
